# EAN_est_python2024

./: README.md  pyproject.toml
Código/Código/: Relación entre minutos usados e ingreso de clientes - Introducción a Pandas.ipynb  Taller_2_María_Olarte_y_Joaquín_Perdomo.ipynb  Taller_Final_María_Olarte_y_Joaquín_Perdomo.ipynb
Documentación/: Comandos de inicio.txt
